--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,7 @@
 SERVER_PORT=8080
+
+PG_USER = postgres
+PG_HOST = 192.168.70.2
+PG_PASSWORD = postgres
+PG_DATABASE = sopaipilleros_guild
+PG_PORT = 5432
