--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "description": "Dependencias necesarias para el sistema del gremio de Sopaipilleros.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "server": "node app.js"
   },
   "keywords": [],
   "author": "Rodrigo Órdenes y Benjamín Tello",
@@ -15,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0"
   }
 }
