--- a/Kafka/servicios/server/Dockerfile
+++ b/Kafka/servicios/server/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:16.6.1-alpine3.14
+FROM node:14
 
 WORKDIR /home/node
 
 COPY . .
 
 RUN npm install
-
+RUN npm install -g nodemon
 CMD [ "npm", "start" ]
