--- a/Kafka/servicios/server/package.json
+++ b/Kafka/servicios/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon -L --inspect=0.0.0.0 index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
